Add tasks and refactor Functional-Programming